alias batman ls
history
alias batmans ls
history
exit
history
alias
history